<resources>
    <string name="app_name">GreenWorks</string>
    <string name="title_activity_main">GreenWorks</string>

    <string name="trees_name">Name of the Tree</string>
    <string name="Give_your_tree_a_name">Give your tree a name</string>
    <string name="Trees_Location"> Location of the Tree</string>
    <string name="Record_where_you_find_your_tree"> Record where you find your tree</string>
    <string name="Write_somthing_to_your_tree"> Write somthing to your tree</string>
    <string name="This_is_my_happy_tree">This is my happy tree!</string>
    <string name="Trees_Photo">Photo of the Tree</string>

    <string name="ui_plant_tree_photo_file_name">plant_tree_photo.jpg</string>
    <string name="ui_add_timeline_photo_file_name">add_timeline_photo.jpg</string>
    <string name="ui_proile_image_descripton">Your Profile Picture</string>
    <string name="ui_profile_button_change">Change</string>
    <string name="ui_profile_button_save">Save</string>
    <string name="ui_profile_button_cancel">Cancel</string>
    <string name="ui_profile_photo_picker_title">Choose A Photo From</string>
    <string-array name="ui_profile_photo_picker_items">
        <item>Take from camera</item>
        <item>Select from gallery</item>
    </string-array>

    <string name="drawer_item_1">Home</string>
    <string name="drawer_item_2">Trees I Planted</string>
    <string name="drawer_item_3">Trees I Updated</string>
    <string name="drawer_item_4">Plant A Tree</string>
    <string name="drawer_item_5">All Trees</string>

    <string name="open">open navigation drawer</string>
    <string name="close">close navigation drawer</string>

    <string name="City">City</string>
    <string name="trees_photo">Photo of the tree</string>
    <string name="ui_profile_button_get_full_timeline">Get Full Timeline</string>
    <string name="ui_profile_button_update">Update</string>
    <string name="ui_profile_button_showTimeLine">Timeline</string>

    <string name="preference_name">TreeInfo</string>
    <string name="timeline_preference_name">TimelineInfo</string>
    <string name="preference_key_tree_name">TreeName</string>
    <string name="preference_key_tree_comment">TreeComment</string>
    <string name="preference_key_tree_city">TreeCity</string>
    <string name="google_play_service_missing">ServiceMissing</string>
</resources>
