<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trees_photo"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/plant_a_tree" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <ImageView
                android:contentDescription="@string/ui_proile_image_descripton"
                android:id="@+id/imageProfile"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true" >
                <requestFocus />
            </ImageView>

            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:onClick="onChangePhotoClicked"
                android:text="@string/ui_profile_button_change" >

            </Button>

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trees_name"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/tvName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Give_your_tree_a_name"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:id="@+id/etName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/City"
            android:id="@+id/tvCity" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Record_where_you_find_your_tree"
            android:inputType="phone"
            android:singleLine="true"
            android:id="@+id/etCity" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Write_somthing_to_your_tree"
            android:id="@+id/tvComment" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/This_is_my_happy_tree"
            android:inputType="date"
            android:singleLine="true"
            android:id="@+id/etComment" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:onClick="onSaveClicked"
                android:text="@string/ui_profile_button_save" >
            </Button>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/ui_profile_button_cancel"
                android:onClick="onCancelClicked">
            </Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
