<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_tree"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/trees_photo"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/plant_a_tree" />

            <ImageView
                android:contentDescription="@string/ui_proile_image_descripton"
                android:id="@+id/detailImageProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <requestFocus />

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date and Time"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/tvTreeDetailDateTime" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="When was it planted"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:id="@+id/etTreeDetailDateTime" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trees_name"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/tvDetailName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Give_your_tree_a_name"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:id="@+id/etDetailName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/City"
                android:id="@+id/tvDetailCity" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/Record_where_you_find_your_tree"
                android:inputType="phone"
                android:singleLine="true"
                android:id="@+id/etDetailCity" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/Write_somthing_to_your_tree"
                android:id="@+id/tvDetailComment" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/This_is_my_happy_tree"
                android:inputType="date"
                android:singleLine="true"
                android:id="@+id/etDetailComment" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:onClick="onUpdateClicked"
                    android:text="@string/ui_profile_button_update" >
                </Button>

                <Button
                    android:id="@+id/btnShowTimeline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:onClick="onShowTimelineClicked"
                    android:text="@string/ui_profile_button_showTimeLine" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
